# nannou_sketches

./: Cargo.toml  README.md
examples/: bouncing_1.rs  bouncing_2.rs  bouncing_3.rs  pattern_1.rs  pattern_2.rs  pattern_3.rs  poi.rs  ripple_carry_circuit.rs
nannou-sketches-2/: Cargo.toml
nannou-sketches-2/src/: main.rs
src/: circuits.rs
